objects/Account/fields/Owner_Active__c.field-meta.xml
<CustomField>
    <fullName>Owner_Active__c</fullName>
    <formula>Owner.IsActive = true</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Owner Active</label>
    <type>Checkbox</type>
</CustomField>