objects/Account/fields/PO_Number_Type__c.field-meta.xml
<CustomField>
    <fullName>PO_Number_Type__c</fullName>
    <label>PO Number Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ALPHANUMERICAL</fullName>
                <label>Alphanumerical</label>
            </value>
            <value>
                <fullName>NUMERICAL</fullName>
                <label>Numerical</label>
            </value>
            <value>
                <fullName>NAME_OF_CONTACT</fullName>
                <label>Name of Contact</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>