objects/Account/fields/Prevent_Billing_Project__c.field-meta.xml
<CustomField>
    <fullName>Prevent_Billing_Project__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Prevent Billing Project</label>
    <type>Checkbox</type>
</CustomField>