objects/Account/fields/Print_TM_Time_Detail__c.field-meta.xml
<CustomField>
    <fullName>Print_TM_Time_Detail__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Print T&amp;M Time Detail</label>
    <type>Checkbox</type>
</CustomField>