objects/Account/fields/Purch_Balance_Due_LCY_60_Days__c.field-meta.xml
<CustomField>
    <fullName>Purch_Balance_Due_LCY_60_Days__c</fullName>
    <label>Purchase Balance (60 Days)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>