objects/Account/fields/Purch_Balance_Due_LCY__c.field-meta.xml
<CustomField>
    <fullName>Purch_Balance_Due_LCY__c</fullName>
    <label>Purchase Balance Due</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>