objects/Account/fields/Purchase_LCY_Last_3_Months__c.field-meta.xml
<CustomField>
    <fullName>Purchase_LCY_Last_3_Months__c</fullName>
    <label>Purchase (Last 3 Months)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>