objects/Account/fields/Purchase_LCY_Last_Year__c.field-meta.xml
<CustomField>
    <fullName>Purchase_LCY_Last_Year__c</fullName>
    <label>Purchase (Last Year)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>