objects/Account/fields/Purchase_LCY_This_Month__c.field-meta.xml
<CustomField>
    <fullName>Purchase_LCY_This_Month__c</fullName>
    <label>Purchase (This Month)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>