objects/Account/fields/Purchase_LCY_YTD__c.field-meta.xml
<CustomField>
    <fullName>Purchase_LCY_YTD__c</fullName>
    <label>Purchase (YTD)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>