objects/Account/fields/Q2_Budget__c.field-meta.xml
<CustomField>
    <fullName>Q2_Budget__c</fullName>
    <label>Q2 Budget</label>
    <summarizedField>Sales_Budget__c.Amount__c</summarizedField>
    <summaryFilterItems>
        <field>Sales_Budget__c.Period_No__c</field>
        <operation>equals</operation>
        <value>4,5,6</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Sales_Budget__c.Year__c</field>
        <operation>equals</operation>
        <value>2022</value>
    </summaryFilterItems>
    <summaryForeignKey>Sales_Budget__c.Customer__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>