objects/Account/fields/Q2_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Q2_Revenue__c</fullName>
    <label>Q2 Revenue</label>
    <summarizedField>Customer_Revenue__c.Amount__c</summarizedField>
    <summaryFilterItems>
        <field>Customer_Revenue__c.Fiscal_Period__c</field>
        <operation>equals</operation>
        <value>4, 5, 6</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Customer_Revenue__c.Fiscal_Year__c</field>
        <operation>equals</operation>
        <value>2024</value>
    </summaryFilterItems>
    <summaryForeignKey>Customer_Revenue__c.Customer__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>