objects/Account/fields/Republic_Rep_Name__c.field-meta.xml
<CustomField>
    <fullName>Republic_Rep_Name__c</fullName>
    <label>Republic Rep Name</label>
    <length>250</length>
    <type>Text</type>
</CustomField>