objects/Account/fields/Requires_2_Signatures_on_TM__c.field-meta.xml
<CustomField>
    <fullName>Requires_2_Signatures_on_TM__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Requires 2 Signatures on T&amp;M</label>
    <type>Checkbox</type>
</CustomField>