objects/Account/fields/Retail__c.field-meta.xml
<CustomField>
    <fullName>Retail__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field captures the National Account field in customer table</description>
    <label>Retail</label>
    <type>Checkbox</type>
</CustomField>