objects/Account/fields/Revenue_Nov_2022__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Nov_2022__c</fullName>
    <label>Revenue November 2022</label>
    <summarizedField>Customer_Revenue__c.Sales_LCY__c</summarizedField>
    <summaryFilterItems>
        <field>Customer_Revenue__c.Fiscal_Year__c</field>
        <operation>equals</operation>
        <value>2022</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Customer_Revenue__c.Fiscal_Period__c</field>
        <operation>equals</operation>
        <value>11</value>
    </summaryFilterItems>
    <summaryForeignKey>Customer_Revenue__c.Customer__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>