objects/Account/fields/Sage_Customer_No__c.field-meta.xml
<CustomField>
    <fullName>Sage_Customer_No__c</fullName>
    <label>D365 Account Number</label>
    <length>30</length>
    <type>Text</type>
</CustomField>