objects/Account/fields/Sales_LCY_2_Months_Prior__c.field-meta.xml
<CustomField>
    <fullName>Sales_LCY_2_Months_Prior__c</fullName>
    <label>Revenue (2 Months Prior)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>