objects/Account/fields/Sales_LCY_Last_Month__c.field-meta.xml
<CustomField>
    <fullName>Sales_LCY_Last_Month__c</fullName>
    <label>Revenue (Last Month)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>