objects/Account/fields/Sales_LCY_Last_Year__c.field-meta.xml
<CustomField>
    <fullName>Sales_LCY_Last_Year__c</fullName>
    <label>Revenue (Last Year)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>