objects/Account/fields/Sales_LCY_YTD__c.field-meta.xml
<CustomField>
    <fullName>Sales_LCY_YTD__c</fullName>
    <label>Revenue (YTD)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>