objects/Account/fields/Salesperson__c.field-meta.xml
<CustomField>
    <fullName>Salesperson__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Depreciated No longer needed.  Ticket#20704</description>
    <inlineHelpText>Depreciated No longer needed. Ticket#20704</inlineHelpText>
    <label>Project Manager</label>
    <referenceTo>Salesperson__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>