objects/Account/fields/Salesperson_Active__c.field-meta.xml
<CustomField>
    <fullName>Salesperson_Active__c</fullName>
    <formula>Account_Executive__r.User__r.IsActive</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Salesperson_Active</label>
    <type>Checkbox</type>
</CustomField>