objects/Account/fields/Salesperson_Code__c.field-meta.xml
<CustomField>
    <fullName>Salesperson_Code__c</fullName>
    <formula>Salesperson__r.Salesperson_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Salesperson Code</label>
    <type>Text</type>
</CustomField>