objects/Account/fields/ScheduledConfirmedTotal__c.field-meta.xml
<CustomField>
    <fullName>ScheduledConfirmedTotal__c</fullName>
    <inlineHelpText>Sum of uninvoiced T&amp;M Total Amount Includ Tax.</inlineHelpText>
    <label>Unbilled Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>