objects/Account/fields/Special_Certificates__c.field-meta.xml
<CustomField>
    <fullName>Special_Certificates__c</fullName>
    <label>Special Certificates</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>WBE</fullName>
            </value>
            <value>
                <fullName>MBE</fullName>
            </value>
            <value>
                <fullName>SBE</fullName>
            </value>
            <value>
                <fullName>Small Disadvantaged Business Enterprise (SDB)</fullName>
            </value>
            <value>
                <fullName>Veteran-Owned Business Enterprise (VBE)</fullName>
            </value>
            <value>
                <fullName>Disabled Veteran-Owned Business (DVBE)</fullName>
            </value>
            <value>
                <fullName>HUBZone Small Business</fullName>
            </value>
            <value>
                <fullName>Physically Challenged Business Enterprise (PBE)</fullName>
            </value>
            <value>
                <fullName>LGBTQ or Gender Non-Conforming Individual Owned Business</fullName>
            </value>
            <value>
                <fullName>Service-Disabled Veteran-Owned Business (SDVOB)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>