objects/Account/fields/Target_Account__c.field-meta.xml
<CustomField>
    <fullName>Target_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Target Account</label>
    <type>Checkbox</type>
</CustomField>