objects/Account/fields/Tax_Area__c.field-meta.xml
<CustomField>
    <fullName>Tax_Area__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Tax Area</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Tax_Area__c.Blocked__c</field>
            <operation>notEqual</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Tax_Area__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>