objects/Account/fields/Third_Party_Safety_Compliance__c.field-meta.xml
<CustomField>
    <fullName>Third_Party_Safety_Compliance__c</fullName>
    <label>3rd Party Safety Compliance</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Avetta</fullName>
            </value>
            <value>
                <fullName>ISN</fullName>
            </value>
            <value>
                <fullName>MSHA</fullName>
            </value>
            <value>
                <fullName>MSHA/ Other Portal</fullName>
            </value>
            <value>
                <fullName>NA</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>PEC</fullName>
            </value>
            <value>
                <fullName>VeroDMS</fullName>
            </value>
            <value>
                <fullName>ISN/MSHA</fullName>
                <isActive>false</isActive>
                <label>ISN/MSHA</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>