objects/Account/fields/To_Account_Id__c.field-meta.xml
<CustomField>
    <fullName>To_Account_Id__c</fullName>
    <label>To Account Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>