objects/Account/fields/Total_Budget_Last_Month__c.field-meta.xml
<CustomField>
    <fullName>Total_Budget_Last_Month__c</fullName>
    <label>Budget (Last Month)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>