objects/Account/fields/Total_Budget_Last_Year__c.field-meta.xml
<CustomField>
    <fullName>Total_Budget_Last_Year__c</fullName>
    <label>Budget (Last Year)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>