objects/Account/fields/Track_Time__c.field-meta.xml
<CustomField>
    <fullName>Track_Time__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Track Time</label>
    <type>Checkbox</type>
</CustomField>