objects/Account/fields/Vendor_Request__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Request__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Vendor Request</label>
    <referenceTo>Vendor_Request__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>