objects/Account/fields/WBE__c.field-meta.xml
<CustomField>
    <fullName>WBE__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Women Owned</inlineHelpText>
    <label>WBE</label>
    <type>Checkbox</type>
</CustomField>