objects/Account/fields/X18_Digit_Account_ID__c.field-meta.xml
<CustomField>
    <fullName>X18_Digit_Account_ID__c</fullName>
    <description>18 digit account id</description>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>18 Digit Account ID</label>
    <type>Text</type>
</CustomField>