objects/Account/fields/X2017_House_Account__c.field-meta.xml
<CustomField>
    <fullName>X2017_House_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <label>2017 House Account</label>
    <type>Checkbox</type>
</CustomField>