objects/Account/validationRules/Account_Executive_Changed.validationRule-meta.xml
<ValidationRule>
    <fullName>Account_Executive_Changed</fullName>
    <active>true</active>
    <errorConditionFormula>ISCHANGED (Account_Executive__c )   &amp;&amp; 
 TEXT(Type
) = "Customer"

&amp;&amp;
 $Profile.Id != "00ef4000000Dizy"
 &amp;&amp; 
 $User.Id    != "005f4000000nrWG"
 &amp;&amp; 
 $User.Id    != "005f4000000ghqGAAQ"
 &amp;&amp; 
 $User.Id    != "005f4000000ghqG"</errorConditionFormula>
    <errorMessage>Account Executive cannot be changed.</errorMessage>
</ValidationRule>