objects/Account/validationRules/AE_SP_Mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>AE_SP_Mandatory</fullName>
    <active>false</active>
    <errorConditionFormula>AND(TEXT(Type)=='Customer', TEXT(Customer_Status__c) == 'Active', OR(Account_Executive__c== null, Salesperson__c = null))</errorConditionFormula>
    <errorMessage>Account Executive and Salesperson are required.</errorMessage>
</ValidationRule>