objects/Account/validationRules/Allow_Users_to_Change_PC.validationRule-meta.xml
<ValidationRule>
    <fullName>Allow_Users_to_Change_PC</fullName>
    <active>false</active>
    <errorConditionFormula>ISCHANGED ( Salesperson__c  )   &amp;&amp; 
 TEXT(Type
) = "Customer"

&amp;&amp;
 $User.Id != "005f4000004J9bb"</errorConditionFormula>
    <errorMessage>You do not have sufficient privileges to change PC</errorMessage>
</ValidationRule>