objects/Account/validationRules/Cannot_change_customer_account_name.validationRule-meta.xml
<ValidationRule>
    <fullName>Cannot_change_customer_account_name</fullName>
    <active>true</active>
    <description>Only System Administrator Profile can edit Account Name field for Customer Account Record type.</description>
    <errorConditionFormula>AND(ISCHANGED( Name ),$Profile.Name != 'System Administrator',
 RecordTypeId = '012f4000000MDXd'



)</errorConditionFormula>
    <errorDisplayField>Name</errorDisplayField>
    <errorMessage>You do not have sufficient privileges to edit this field.</errorMessage>
</ValidationRule>