objects/Account/validationRules/Deactive_Account.validationRule-meta.xml
<ValidationRule>
    <fullName>Deactive_Account</fullName>
    <active>true</active>
    <errorConditionFormula>(Open_Opportunity_Count__c &gt; 0) &amp;&amp; ( ISCHANGED(Customer_Status__c) &amp;&amp; Text(Customer_Status__c) == 'Inactive')</errorConditionFormula>
    <errorMessage>You could not deactivate this Account, since it is associated with open Opportunities.</errorMessage>
</ValidationRule>