objects/Account/validationRules/PC_Changed.validationRule-meta.xml
<ValidationRule>
    <fullName>PC_Changed</fullName>
    <active>false</active>
    <errorConditionFormula>ISCHANGED ( Salesperson__c  )   &amp;&amp; 
 TEXT(Type
) = "Customer"

&amp;&amp;
 $Profile.Id != "00ef4000000Dizy"</errorConditionFormula>
    <errorMessage>Project Manager cannot be changed.</errorMessage>
</ValidationRule>