objects/Account/validationRules/SC_Changed.validationRule-meta.xml
<ValidationRule>
    <fullName>SC_Changed</fullName>
    <active>true</active>
    <errorConditionFormula>ISCHANGED ( Subsidiary_Company__c )   &amp;&amp; 
 TEXT(Type
) = "Customer"

&amp;&amp;
 $Profile.Id != "00ef4000000Dizy"</errorConditionFormula>
    <errorMessage>Subsidiary Company cannot be changed.</errorMessage>
</ValidationRule>