objects/Account/validationRules/Validate_Account_Name_Character_Count.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_Account_Name_Character_Count</fullName>
    <active>false</active>
    <errorConditionFormula>AND(LEN(Name) &gt; 50, RecordTypeId &lt;&gt; '012f4000000Ulp0')</errorConditionFormula>
    <errorDisplayField>Name</errorDisplayField>
    <errorMessage>Account name must not exceed 50 characters.</errorMessage>
</ValidationRule>