objects/Account/validationRules/ValidateServiceCenter.validationRule-meta.xml
<ValidationRule>
    <fullName>ValidateServiceCenter</fullName>
    <active>true</active>
    <errorConditionFormula>IF (AND(Service_Center__c != null, Subsidiary_Company__c !=  Service_Center__r.Subsidiary_Company__c), true, false)</errorConditionFormula>
    <errorMessage>The subsidiary company does not match service center setup.</errorMessage>
</ValidationRule>