objects/Account/listViews/Corporates.listView-meta.xml
<ListView>
    <fullName>Corporates</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.ACCOUNT_NUMBER</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>ACCOUNT.CREATED_DATE</columns>
    <columns>Sales_LCY_YTD__c</columns>
    <columns>Sales_LCY_Last_Year__c</columns>
    <columns>Sales_LCY_2_Years_Prior__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.TYPE</field>
        <operation>equals</operation>
        <value>Corporate</value>
    </filters>
    <label>Corporates</label>
</ListView>