objects/Account/listViews/Customers.listView-meta.xml
<ListView>
    <fullName>Customers</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>Balance_Due_LCY_Current__c</columns>
    <columns>Balance_Due_LCY__c</columns>
    <columns>ACCOUNT.ACCOUNT_NUMBER</columns>
    <columns>Account_Executive__c</columns>
    <columns>Salesperson__c</columns>
    <columns>Subsidiary_Company__c</columns>
    <columns>Customer_Specific_Documentation__c</columns>
    <columns>ACCOUNT.LAST_UPDATE</columns>
    <columns>UPDATEDBY_USER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.Customer</value>
    </filters>
    <label>Customers</label>
</ListView>