objects/Account/listViews/I_C.listView-meta.xml
<ListView>
    <fullName>I_C</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.ACCOUNT_NUMBER</columns>
    <columns>Account_Executive__c</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>Subsidiary_Company__c</columns>
    <columns>Balance_Due_LCY_Current__c</columns>
    <columns>NAV_ID__c</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>Emergency__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Inter_co_Account__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>I/C</label>
</ListView>