objects/Account/listViews/Inactive_Accounts.listView-meta.xml
<ListView>
    <fullName>Inactive_Accounts</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>Subsidiary_Company__c</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>Credit_Hold__c</columns>
    <columns>Customer_Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Customer_Status__c</field>
        <operation>notEqual</operation>
        <value>Active</value>
    </filters>
    <filters>
        <field>Subsidiary_Company__c</field>
        <operation>notContain</operation>
        <value>4</value>
    </filters>
    <label>Inactive Accounts</label>
</ListView>