objects/Account/listViews/Minority_Vendor.listView-meta.xml
<ListView>
    <fullName>Minority_Vendor</fullName>
    <columns>ACCOUNT.CREATED_DATE</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>Certified_States__c</columns>
    <columns>Special_Certificates__c</columns>
    <columns>Inter_co_Account__c</columns>
    <columns>NAV_ID__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.Vendor</value>
    </filters>
    <filters>
        <field>Special_Certificates__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>Minority Vendor</label>
</ListView>