objects/Account/listViews/MyAccounts.listView-meta.xml
<ListView>
    <fullName>MyAccounts</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>Account_Executive__c</columns>
    <columns>Salesperson__c</columns>
    <filterScope>Mine</filterScope>
    <label>My Accounts</label>
</ListView>