objects/Account/listViews/Org_Account_Hierarchy.listView-meta.xml
<ListView>
    <fullName>Org_Account_Hierarchy</fullName>
    <columns>ACCOUNT.ACCOUNT_NUMBER</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>Subsidiary_Company__c</columns>
    <columns>Salesperson__c</columns>
    <columns>Account_Executive__c</columns>
    <columns>Sales_LCY_YTD__c</columns>
    <columns>Balance_Due_LCY__c</columns>
    <columns>Purch_Balance_Due_LCY__c</columns>
    <columns>ACCOUNT.ADDRESS2_STREET</columns>
    <columns>ACCOUNT.ADDRESS2_CITY</columns>
    <columns>ACCOUNT.ADDRESS2_STATE_CODE</columns>
    <filterScope>Everything</filterScope>
    <label>Org_Account_Hierarchy</label>
</ListView>