objects/Account/listViews/Vendor.listView-meta.xml
<ListView>
    <fullName>Vendor</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>Purchase_LCY_YTD__c</columns>
    <columns>Purchase_LCY_This_Month__c</columns>
    <columns>Purch_Balance_Due_LCY__c</columns>
    <columns>Payment_Term__c</columns>
    <columns>Customer_Status__c</columns>
    <columns>ACCOUNT.CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.Vendor</value>
    </filters>
    <label>Vendor</label>
</ListView>